# jump_rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  config.toml.example  docker-compose.local.yml  docker-compose.yml  release.toml
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
.zed/: settings.json
frontend/: .prettierignore  eslint.config.js  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: devices.ts
frontend/src/components/: DeviceCard.module.css  DeviceCard.tsx  DeviceGrid.module.css  DeviceGrid.tsx  DeviceModal.tsx  Header.module.css  Header.tsx  ImportExportModal.module.css  ImportExportModal.tsx  LoginScreen.module.css  LoginScreen.tsx  Modal.module.css  Modal.tsx  StatsBar.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx  authTypes.ts
frontend/src/hooks/: useAuth.ts  useAuthErrorHandler.ts  useCreateDevice.ts  useDeleteDevice.ts  useDevices.ts  useExportDevices.ts  useImportDevices.ts  useLogin.ts  useLogout.ts  useMacLookup.ts  usePacketCount.ts  useToast.ts  useUpdateDevice.ts  useWakeDevice.ts
frontend/src/styles/: base.css  index.css
frontend/src/types/: device.ts
scripts/: update-vendor-js.py
src/: api.rs  app.rs  arp.rs  auth.rs  cli.rs  config.rs  devices.rs  error.rs  logging.rs  main.rs  models.rs  storage.rs  telemetry.rs  web.rs  wol.rs
src/api/: arp.rs  auth.rs  devices.rs  handlers.rs  mod.rs  wol.rs
src/cli/: openapi.rs  user.rs
src/devices/: wol.rs
src/web/: error.rs  forms.rs  icons.rs  views.rs
src/web/views/: devices.rs  feedback.rs  layout.rs  transfer.rs
static/: app.css  app.js
