[package]
name = "jump_rs"
version = "2.0.0-beta1"
edition = "2024"
description = "Wake-on-LAN web server"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = "0.8"
axum-extra = {version = "0.10", features = ["cookie"]}
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "request-id", "util"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = { version = "0.27", features = ["axum"] }
nanoid = "0.4"
thiserror = "1"
parking_lot = "0.12.5"
config = "0.15"
wake-on-lan = "0.2"
bcrypt = "0.18.0"
time = { version = "0.3.47", features = ["serde", "serde-human-readable"] }

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
