[package]
name = "jump_rs"
version = "2.1.0-beta.1"
edition = "2024"
description = "Wake-on-LAN web server"
license = "MIT"
repository = "https://github.com/mitsimi/jump_rs"
homepage = "https://github.com/mitsimi/jump_rs"
readme = "README.md"
keywords = ["wake-on-lan", "wol", "server"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = "0.8"
axum-extra = {version = "0.10", features = ["cookie"]}
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "request-id", "util"] }
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
maud = { version = "0.27", features = ["axum"] }
nanoid = "0.4"
thiserror = "1"
parking_lot = "0.12.5"
config = { version = "0.15", default-features = false, features = ["toml"] }
wake-on-lan = "0.2"
bcrypt = "0.18.0"
base64 = "0.22"
time = { version = "0.3.47", features = ["serde", "serde-human-readable"] }

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
