
[package]
name = "jump_rs"
version = "2.1.0-beta.2"
edition = "2024"
description = "Wake-on-LAN web server"
documentation = "https://github.com/mitsimi/jump_rs"
readme = "README.md"
homepage = "https://github.com/mitsimi/jump_rs"
repository = "https://github.com/mitsimi/jump_rs"
license = "MIT"
keywords = ["wake-on-lan", "wol", "server"]
categories = ["command-line-utilities", "web-programming::http-server"]

[package.metadata.bin]
# Project-scoped developer tools managed by cargo-run-bin.
cargo-nextest = { version = "0.9.140", locked = true }
bacon = { version = "3.24.0", locked = true }
cargo-release = { version = "1.1.3", locked = true }

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-extra = {version = "0.10", features = ["cookie"]}
base64 = "0.22"
bcrypt = "0.18.0"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dialoguer = "0.12"
maud = { version = "0.27", features = ["axum"] }
nanoid = "0.4"
parking_lot = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3.47", features = ["serde", "serde-human-readable"] }
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
wake-on-lan = "0.2"


[dev-dependencies]
tempfile = "3"
tower = "0.5"
